--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@discordjs/opus": "0.9.0",
         "@discordjs/voice": "0.17.0",
+        "@distube/ytdl-core": "^4.14.4",
         "async-mutex": "^0.4.0",
         "discord.js": "14.15.3",
         "ffmpeg-static": "5.2.0",
@@ -20,9 +21,7 @@
         "play-dl": "1.9.7",
         "spotify-web-api-node": "5.0.2",
         "winston": "^3.13.0",
-        "winston-daily-rotate-file": "^5.0.0",
-        "yt-stream": "1.6.1",
-        "ytdl-core": "^4.11.5"
+        "winston-daily-rotate-file": "^5.0.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.0"
