--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "txte",
-    "version": "1.6.3",
+    "version": "1.6.4",
     "description": "",
     "main": "index.js",
     "scripts": {
@@ -10,10 +10,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@discordjs/opus": "0.9.0",
-        "@discordjs/voice": "0.17.0",
+        "@discordjs/opus": "0.10.0",
+        "@discordjs/voice": "0.18.0",
         "async-mutex": "^0.4.0",
-        "discord.js": "14.15.3",
+        "discord.js": "14.18.0",
         "ffmpeg-static": "5.2.0",
         "install": "^0.13.0",
         "libsodium-wrappers": "0.7.13",
@@ -21,7 +21,7 @@
         "spotify-web-api-node": "5.0.2",
         "winston": "^3.13.0",
         "winston-daily-rotate-file": "^5.0.0",
-        "yt-stream": "1.6.1"
+        "youtube-dl-exec": "^3.0.19"
     },
     "devDependencies": {
         "nodemon": "^3.1.0"
