--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@discordjs/opus": "0.10.0",
         "@discordjs/voice": "0.18.0",
+        "@prisma/client": "^5.0.0",
         "async-mutex": "^0.4.0",
         "discord.js": "14.18.0",
         "ffmpeg-static": "5.2.0",
@@ -24,6 +25,7 @@
         "youtube-dl-exec": "^3.0.19"
     },
     "devDependencies": {
-        "nodemon": "^3.1.0"
+        "nodemon": "^3.1.0",
+        "prisma": "^5.0.0"
     }
 }
